<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/emptyMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/message_loading" />


        <ScrollView xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/resumeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.cv.CvActivity">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- name -->

                <TextView
                    android:id="@+id/label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="2"
                    tools:text="Lampros Gkotsoulias" />

                <!-- contact details -->

                <TextView
                    android:id="@+id/label_contact_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_contact_details" />

                <TextView
                    android:id="@+id/contactDetailsPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    tools:text="12345678910" />

                <TextView
                    android:id="@+id/contactDetailsEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    tools:text="lampros@mail.com" />

                <!-- summary -->

                <TextView
                    android:id="@+id/label_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_summary" />

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    tools:text="Lorem ipsum" />

                <!-- work experience -->

                <TextView
                    android:id="@+id/label_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_experience" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/experienceRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- skills -->

                <TextView
                    android:id="@+id/label_skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_skills" />

                <TextView
                    android:id="@+id/skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    tools:text="Java, Kotlin" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </ScrollView>

    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>